objects/EFX__Debug_Header__c.object
<CustomObject>
    <fields>
        <fullName>EFX__Area__c</fullName>
        <label>Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EFX__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EFX__Job_Id__c</fullName>
        <label>Job Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__Process_name__c</fullName>
        <label>Process name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__Source__c</fullName>
        <label>Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Debug Header</label>
    <listViews>
        <fullName>EFX__All_Debug_Headers</fullName>
        <columns>NAME</columns>
        <columns>EFX__Description__c</columns>
        <columns>EFX__Source__c</columns>
        <columns>EFX__Process_name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Debug Headers</label>
    </listViews>
    <nameField>
        <displayFormat>DH-{0000000}</displayFormat>
        <label>Debug Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debug Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>